--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/rest": "^1.1.0",
+    "@types/node": "^18.0.6",
     "better-sqlite3": "^7.6.2",
     "discord-api-types": "^0.37.5",
     "discord.js": "^14.3.0"
